--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
@@ -40,5 +41,6 @@
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "proxy": "https://haren-dev.defcon.or.kr"
 }
