--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "google-auth-library": "^8.7.0",
+    "next": "^13.2.4",
     "next-auth": "^4.21.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
