--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0",
+    "firestore": "^1.1.6",
     "google-auth-library": "^8.7.0",
-    "next": "^13.2.4",
+    "next": "^13.3.4",
     "next-auth": "^4.21.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-google-login": "^5.2.2",
     "react-horizontal-scrolling-menu": "^4.0.1",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
@@ -45,5 +47,13 @@
   "main": "next.config.js",
   "author": "",
   "license": "ISC",
-  "proxy": "https://haren-dev.defcon.or.kr"
+  "proxy": "https://haren-dev.defcon.or.kr",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Charizard6/DCC_FE.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Charizard6/DCC_FE/issues"
+  },
+  "homepage": "https://github.com/Charizard6/DCC_FE#readme"
 }
