--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "axios": "^1.3.5",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "firebase": "^9.21.0",
+    "firebase": "^9.22.0",
     "firebase-admin": "^11.7.0",
     "firestore": "^1.1.6",
     "google-auth-library": "^8.7.0",
